src/pages/Representatives/Representatives.css
.main-container {
  display: flex;
  flex-direction: row;
}

.rep-header{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.all-representatives-container {
  display: flex;
  flex-wrap: wrap;
  margin-top: 0px;
}

.representative-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 15px;
  width: 250px;
  height: 250px;
}

.rep-contain {
  max-width: 300px;
  max-height: 300px;
  min-width: 300px;
  min-height: 300px;

}
.head-shot {
  width: 200px;
  height: 200px;
}

.right-side {
}

